# tinker-tesla-linux

tesla3d/: CMakeLists.txt
tesla3d/shaders/: fs.glsl  vs.glsl
tesla3d/src/: gl_helpers.cpp  gl_helpers.h  main.cpp  tiny_gltf_wrapper.cpp  tiny_gltf_wrapper.h
